--- a/src/main/resources/assets/better-rockets/lang/en_us.json
+++ b/src/main/resources/assets/better-rockets/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.better-rockets.rechargeable_firework": "Rechargeable Firework"
+  "item.better-rockets.rechargeable_firework": "Rechargeable Firework",
+  "itemTooltip.better-rockets.rechargeable_firework": "firework rockets loaded"
 }
