add: improved player messaging

--- a/src/main/resources/assets/better-rockets/lang/en_us.json
+++ b/src/main/resources/assets/better-rockets/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.better-rockets.rechargeable_firework": "Rechargeable Firework",
-  "itemTooltip.better-rockets.rechargeable_firework": "firework rockets loaded"
+  "itemLoadWarningLastX.better-rockets.rechargeable_firework": "Only %d firework rockets left",
+  "itemLoadWarningLastOne.better-rockets.rechargeable_firework": "Only one firework rocket left",
+  "itemTooltip.better-rockets.rechargeable_firework": "%d/%d firework rockets loaded"
 }
