--- a/src/main/resources/assets/better-rockets/lang/en_us.json
+++ b/src/main/resources/assets/better-rockets/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.better-rockets.rechargeable_firework": "Rechargeable Firework",
+  "item.better-rockets.rechargeable_firework": "Rocket Bundle",
   "itemLoadWarningLastX.better-rockets.rechargeable_firework": "Only %d firework rockets left",
   "itemLoadWarningLastOne.better-rockets.rechargeable_firework": "Only one firework rocket left",
   "itemTooltip.better-rockets.rechargeable_firework": "%d/%d firework rockets loaded"
